--- a/project/build.gradle
+++ b/project/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.23'
+    id 'org.springframework.boot' version '2.7.5'
+    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
 }
 
 group = 'com.demo'
